# ParaEncoder

./: LICENSE  README.md  output.txt  pyproject.toml  test.py
para/: __init__.py  cli.py  convert.py  detect.py  handlers.py  io.py  normalize.py  rules.py
tests/: test_cli.py  test_convert.py  test_detect.py  test_normalize.py
