[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paraencoder"
version = "0.2.1"
description = "Burmese text detection and conversion toolkit for Zawgyi and Unicode"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Para Maintainers" }
]
license = { text = "MIT" }
keywords = ["myanmar", "burmese", "zawgyi", "unicode", "text", "conversion"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Text Processing :: Linguistic",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Laitei40/ParaEncoder"
Repository = "https://github.com/Laitei40/ParaEncoder"
Issues = "https://github.com/Laitei40/ParaEncoder/issues"

[project.optional-dependencies]
test = ["pytest>=7"]
office = ["python-docx>=1.0", "openpyxl>=3.1", "odfpy>=1.4"]
all = ["python-docx>=1.0", "openpyxl>=3.1", "odfpy>=1.4"]

[project.scripts]
para = "para.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["para"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
